--- a/.github/workflows/build-kernel.yml
+++ b/.github/workflows/build-kernel.yml
@@ -47,11 +47,11 @@ jobs:
       USE_CCACHE: 1
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-      KERNEL_REPO: "https://github.com/elohim-etz/android_kernel_realme_mt6785.git"
+      KERNEL_REPO: "https://github.com/akheljava/storm_kernel_realme_salaa.git"
       CLANG_REPO: "https://gitlab.com/crdroidandroid/android_prebuilts_clang_host_linux-x86_clang-r547379.git"
       ANYKERNEL_REPO: "https://github.com/elohim-etz/AK3.git"
-      ANYKERNEL_BRANCH: "mikuchan"
-      DEFCONFIG: "RM6785_defconfig"
+      ANYKERNEL_BRANCH: "stormbreaker"
+      DEFCONFIG: "salaa_defconfig"
 
     steps:
       - name: Checkout Workflow Repository
